/*
 * $Id: ChangeLog,v 1.1860 2003/12/12 20:36:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-12-13 10:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/itemapi.c
    * fix problem on representation of -0 value

2003-12-12 12:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/macro/macro.slx
     % Removed support for _ID_ON_HOLD (not needed).
   * source/vm/macro.c
     * Added 3rd param (int iLen) to hb_macroParse(), and optimized calls to use it.
       /* This also fix a minor bug when passed string might not have a numm termination. */

2003-12-12 21:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/w32/dir.cf
  * xharbour/config/w32/install.cf
    ! fixed small incompatibilities with MSYS

2003-12-12 16:08 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbrdddbf.h
    * Reverted to original locking sckeme.

2003-12-12 11:12 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * some workaround for GCC3.x bug in optimization

  * xharbour/source/rdd/dbf1.c
    * small fix for DBF files with corrupted header in exclusive mode

  * xharbour/source/rdd/dbffpt/dbffpt1.c
    * fixed typo in TRACELOG function name

  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
    - build libfm.a with memory statistic removed

  * xharbour/bin/hb-func.sh
  * xharbour/bin/postinst.sh
    + build libfm.a with memory statistic
    + next changes to make it msys compatible

2003-12-12 06:35 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hblog.ch
    + Now supports shorter grammar:
      Log <msgs> PRIO [class] as a shortand for PRIO HB_LOG_[class]

  * include/hbrdddbf.h
    * For linux, exclusive lock values changed to 0,0.

  * source/rtl/errorsys.prg